Update for compliance with OneFeed version 0.3.0